Fixing distorted images in larger screens

--- a/app/css/nvel.css
+++ b/app/css/nvel.css
@@ -620,6 +620,7 @@ h3 { font-size: 2.4rem; line-height: 1.3;  letter-spacing: -.08rem; }
 		width: auto;
 		max-width: 100%;
 		max-height: 50vw;
+		min-height: 0;
 	}
 }
 
